making progress on validation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           Email:
           <input type="email" name="email" id="email" required />
         </label>
+        <!-- <div class="emailError"></div> -->
         <label for="country">
           Country:
           <select name="country" id="country" required>
@@ -24,13 +25,13 @@
           Postal Code:
           <input type="text" name="postal" id="postal" required />
         </label>
-        <label for="pwd">
+        <label for="password">
           Password:
-          <input type="pwd" name="pwd" id="pwd" required />
+          <input type="password" name="password" id="password" required />
         </label>
         <label for="confirmPWD">
           Confirm Password:
-          <input type="confirmPWD" name="confirmPWD" id="confirmPWD" required />
+          <input type="password" name="confirmPWD" id="confirmPWD" required />
         </label>
         <input type="submit" value="Submit" />
       </form>
